# gamesdk

./: .gitignore  Android.bp  CMakeLists.txt  OWNERS  PREUPLOAD.cfg  README  README.md  build.gradle  build_swappy  settings.gradle
bouncyball/: build.gradle
bouncyball/app/: CMakeLists.txt  build.gradle
bouncyball/app/src/main/cpp/: Circle.cpp  Orbit.cpp  Renderer.cpp  Renderer.h  WorkerThread.h  swappy  swappy-utils
bouncyball/app/src/main/java/com/prefabulated/bouncyball/: OrbitActivity.java
bouncyball/app/src/main/res/layout/: activity_orbit.xml
hooks/: check_swappy_abi_version.sh
include/device_info/: device_info.h  device_info.proto
include/swappy/: swappy.h  swappyGL.h  swappyGL_extra.h  swappyVk.h  swappy_common.h  swappy_external_choreographer.h  swappy_extra.h
include/swappyVk/: SwappyVk.h
include/tuningfork/: protobuf_nano_util.h  protobuf_util.h  tuningfork.h  tuningfork_extra.h
includes/swappy/: Swappy.h  Swappy_c.h
packagesdk/: README.md  build.gradle
packagesdk/app/: CMakeLists.txt  build.gradle
packagesdk/app/src/main/cpp/: Swappy_c.cpp  Swappy_c.h  swappy
samples/: gamesdk.cmake
samples/bouncyball/app/: CMakeLists.txt  build.gradle
samples/bouncyball/app/src/main/: AndroidManifest.xml
samples/bouncyball/app/src/main/cpp/: Circle.cpp  Circle.h  Orbit.cpp  Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  WorkerThread.h
samples/bouncyball/app/src/main/java/com/prefabulated/bouncyball/: OrbitActivity.java  SettingsFragment.java
samples/bouncyball/app/src/main/res/layout/: activity_orbit.xml
samples/bouncyball/app/src/main/res/values/: strings.xml
samples/bouncyball/app/src/main/res/xml/: preferences.xml
samples/tuningfork/tftestapp/app/: CMakeLists.txt  build.gradle
samples/tuningfork/tftestapp/app/src/androidTest/java/com/google/tuningfork/: Tests.java
samples/tuningfork/tftestapp/app/src/main/: AndroidManifest.xml
samples/tuningfork/tftestapp/app/src/main/assets/tuningfork/: tuningfork_settings.txt
samples/tuningfork/tftestapp/app/src/main/cpp/: Renderer.cpp  Trace.h  histogram.cpp  histogram.h  prong.cpp  prong.h  tftestapp.cpp  tuningfork.cpp  tuningfork.h  uploadthread.cpp  uploadthread.h
samples/tuningfork/tftestapp/app/src/main/java/com/google/demoapp/: TFTestActivity.java
samples/tuningfork/tftestapp/app/src/main/java/com/google/tuningfork/: TFTestActivity.java
samples/tuningfork/tftestapp/app/src/main/java/com/tuningfork/demoapp/: TFTestActivity.java
samples/tuningfork/tftestapp/app/src/main/proto/: dev_tuningfork.proto  tuningfork_extensions.proto  tuningfork_extensions_lite.proto
samples/tuningfork/tftestapp/app/src/main/res/layout/: buttons.xml
samples/tuningfork/tftestapp/app/src/test/cpp/: histogram_test.cpp  histogram_test.h  nativetests.cpp  tuningfork_test.cpp  tuningfork_test.h
samples/tuningfork/tftestapp/app/src/test/java/com/google/tuningfork/: UnitTests.java
src/: CMakeLists.txt
src/protobuf/full/: CMakeLists.txt
src/protobuf/lite/: CMakeLists.txt
src/swappy/: CMakeLists.txt  ChoreographerFilter.cpp  ChoreographerThread.cpp  EGL.h  FrameStatistics.cpp  Settings.cpp  Settings.h  Swappy.cpp  Swappy.h  SwappyCommon.cpp  SwappyCommon.h  SwappyVkBase.h  SwappyVkFallback.cpp  SwappyVkGoogleDisplayTiming.cpp  SwappyVkGoogleDisplayTiming.h  Swappy_c.cpp  SystemProperties.cpp  Thread.cpp
src/swappy/common/: CPUTracer.cpp  CPUTracer.h  ChoreographerFilter.cpp  ChoreographerFilter.h  ChoreographerThread.cpp  ChoreographerThread.h  FrameStatistics.cpp  FrameStatistics.h  Settings.cpp  Settings.h  SwappyCommon.cpp  SwappyCommon.h  SwappyDisplayManager.cpp  SwappyDisplayManager.h  Thread.h  swappy_c.cpp
src/swappy/opengl/: EGL.cpp  EGL.h  Swappy.h  SwappyGL.cpp  SwappyGL.h  swappyGL_c.cpp
src/swappy/src/main/cpp/: ChoreographerFilter.cpp  ChoreographerFilter.h  ChoreographerThread.cpp  ChoreographerThread.h  CpuInfo.cpp  CpuInfo.h  EGL.cpp  EGL.h  FrameStatistics.cpp  Settings.cpp  Settings.h  Swappy.cpp  Swappy.h  Swappy_c.cpp  Thread.h
src/swappy/src/main/java/com/google/swappy/: ChoreographerCallback.java
src/swappy/vulkan/: SwappyVk.cpp  SwappyVk.h  SwappyVkBase.cpp  SwappyVkBase.h  SwappyVkFallback.cpp  SwappyVkFallback.h  SwappyVkGoogleDisplayTiming.cpp  SwappyVkGoogleDisplayTiming.h  swappyVk_c.cpp
src/tuningfork/: CMakeLists.txt  annotation_util.cpp  annotation_util.h  clearcut_backend.cpp  clearcut_backend.h  clearcutserializer.cpp  clearcutserializer.h  crash_handler.cpp  crash_handler.h  fpdownload.cpp  histogram.cpp  histogram.h  jni_helper.h  prong.cpp  prong.h  protobuf_nano_util.h  protobuf_util.cpp  protobuf_util.h  tuningfork.cpp  tuningfork.h  tuningfork_c.cpp  tuningfork_extra.cpp  tuningfork_internal.h  tuningfork_utils.cpp  tuningfork_utils.h  uploadthread.cpp  uploadthread.h  version.script
src/tuningfork/proto/: eng_tuningfork.proto  eng_tuningfork_lite.proto  tuningfork.proto  tuningfork_clearcut_log.proto  tuningfork_clearcut_log_lite.proto  tuningfork_lite.proto
src/tuningfork/tools/validation/: README.md
src/tuningfork/tools/validation/src/main/java/com/google/tuningfork/validation/: ApkConfig.java  DeveloperTuningforkParser.java  ErrorCollector.java  ErrorType.java  ExternalProtoCompiler.java  ParserErrorCollector.java  ProtoHelper.java  TuningforkApkValidationTool.java  ValidationUtil.java
src/tuningfork/tools/validation/src/test/java/com/google/tuningfork/validation/: DeveloperTuningforkParserTest.java  ExternalProtoCompilerTest.java  ProtoCompilerHelper.java  ValidationUtilTest.java
src/tuningfork/tools/validation/src/test/resources/: protoc
src/tuningfork/tools/validation/src/test/resources/testdata/: annotation_complex.proto  annotation_not_only_enums.proto  annotation_valid.proto  compile_invalid.proto  compile_valid.proto  compile_with_deps.proto  fidelity_params_complex.proto  fidelity_params_not_scalar.proto  fidelity_params_valid.proto
swappy/: CMakeLists.txt  ChoreographerFilter.cpp  ChoreographerFilter.h  EGL.cpp  EGL.h  Swappy.cpp  Swappy.h
swappy-utils/: Settings.cpp  Settings.h  Thread.h
test/: OWNERS
(+60 files in other folders)
